--- a/.github/workflows/snk.yaml
+++ b/.github/workflows/snk.yaml
@@ -1,3 +1,4 @@
+---
 - uses: Platane/snk@v3
   with:
     # github user name to read the contribution graph from (**required**)
@@ -13,7 +14,7 @@
     #  - color_dots:  Coma separated list of dots color.
     #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
     #                 Exactly 5 colors are expected.
-    outputs: |
+    outputs: |-
       dist/github-snake.svg
       dist/github-snake-dark.svg?palette=github-dark
       dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
